# tree-sitter-fernlog

./: .build.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fern.pc.in  tree-sitter-fernlog.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fern/: __init__.py  binding.c
bindings/python/tree_sitter_fernlog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFern/: fern.h
bindings/swift/TreeSitterFernTests/: TreeSitterFernTests.swift
bindings/swift/TreeSitterFernlog/: fernlog.h
bindings/swift/TreeSitterFernlogTests/: TreeSitterFernlogTests.swift
queries/: conceals.scm  folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
