[package]
name = "tree-sitter-fern"
description = "Markdown-like parser for the Fern journal file"
version = "0.1.0"
authors = ["Andie Keller <andie@bugwhisperer.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fern"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://git.sr.ht/~bugwhisperer/tree-sitter-fern"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
